content: Clarify WebContentsObserver::Observe() API

Today, Observe(nullptr) is allowed, which will unobserve the current
WebContents. This means that Observe(nullptr) is also allowed even if we
are not observing anything, which could well be a programming error.

This CL adds a DCHECK to catch this error. It also updates the comments
to clarify the Observe() API.

BUG=771064

Change-Id: I733312bd7fa61ff422405882ee09e766c2ae5506